src/objects/ADBEpmpAlertsParams__mdt.object
<CustomObject>
    <description>Store Endpoint and request/constant paramaters for the Epmp Alerts service</description>
    <fields>
        <fullName>Actor__c</fullName>
        <description>store actor constant value for epmp alerts service</description>
        <label>Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeAlertsInResponse__c</fullName>
        <description>store IncludeAlertsInResponse constant request parameter value</description>
        <label>IncludeAlertsInResponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calling_app_name__c</fullName>
        <description>store calling_app_name constant request parameter value</description>
        <label>calling_app_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <description>store the endpoint url for epmp alerts api</description>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>includeContactInfoInResponse__c</fullName>
        <description>store includeContactInfoInResponse constant request parameter value</description>
        <label>includeContactInfoInResponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <description>store user_id constant request parameter value</description>
        <label>user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_type__c</fullName>
        <description>store calling_app_name constant request parameter value</description>
        <label>user_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADBEpmpAlertsParams</label>
    <pluralLabel>ADBEpmpAlertsParams</pluralLabel>
</CustomObject>